# ChessPlusPlus

./: .gitignore  CMakeLists.txt
include/: chessBoard.hpp  chessPiece.hpp  gameInstance.hpp
src/: chessBoard.cpp  chessPiece.cpp  gameInstance.cpp  main.cpp
